Improve java-docker integration
- Add jvm-flags to use container ram limit instead of system ram